--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.24",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "firebase": "^11.0.2",
     "next": "14.1.4",
     "next-seo": "^6.5.0",
     "next-themes": "^0.3.0",
