--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tailwind-next-js-comming-soon",
-  "description": "This is a lightweight and responsive NextJS tailwindcss template that can be used for various projects that require a coming soon page before launch.",
+  "description": "We are building a SaaS product to help game developers for their image generation needs.",
   "version": "0.1.0",
   "categories": [],
   "private": true,
